<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" 
    android:background="#DDE5EF">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="#171717"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/ic_launcher_spotplace" 
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/title_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:text="@string/menuTitreSignUp"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </LinearLayout>

    
 <!-- USERNAME -->
    <EditText
        android:id="@+id/signUp_username_Input"
        android:hint="@string/signUp_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="text" >
    
        <requestFocus />
    </EditText>
    

    <!-- PASSWORD -->

    <EditText
        android:id="@+id/signUp_password_Input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUp_username_Input"
        android:layout_alignRight="@+id/signUp_username_Input"
        android:layout_below="@+id/signUp_username_Input"
        android:ems="10"
        android:hint="@string/signUp_password"
        android:inputType="textPassword" />

	<!-- EMAIL -->
	<EditText
        android:id="@+id/signUp_email_Input"
        android:hint="@string/signUp_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUp_password_Input"
        android:layout_below="@+id/signUp_password_Input"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <!-- CANTON -->
	<Spinner
        android:id="@+id/signUp_canton_Input"
        android:hint="@string/signUp_canton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signUp_email_Input"
        android:layout_alignRight="@+id/signUp_password_Input"
        android:layout_below="@+id/signUp_email_Input"
        android:ems="10"
        android:prompt="@string/canton_picker" />

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUp_canton_Input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/signUp_button" />

</RelativeLayout>