<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginPage" 
    android:background="#DDE5EF">

    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/inputLogin"
        android:layout_below="@+id/logoLogin"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputLogin"
        android:layout_alignRight="@+id/inputLogin"
        android:layout_below="@+id/inputLogin"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/inputPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputPassword"
        android:layout_alignRight="@+id/inputPassword"
        android:layout_below="@+id/inputPassword"
        android:layout_marginTop="16dp"
        android:text="@string/buttonLogin" />

    <TextView
        android:id="@+id/labelRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/linkRegistration"
        android:textColor="#6666FF"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:src="@drawable/logo_login" />

</RelativeLayout>